Fix sender profile alignment in replies

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -100,6 +100,8 @@ limitations under the License.
 
         .mx_ReplyTile .mx_SenderProfile {
             display: block;
+            top: unset;
+            left: unset;
         }
 
         .mx_ReactionsRow {
